force-app/main/default/objects/PAF_Profile__c/PAF_Profile__c.object-meta.xml
<CustomObject>
    <label>PAF Profile</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>