force-app/main/default/objects/PAF_Profile__c/fields/A_C_I__c.field-meta.xml
<CustomField>
    <fullName>A_C_I__c</fullName>
    <formula>IF( Age_Departure_Date__c  &lt; 2, &quot;INF&quot;,
IF(Age_Departure_Date__c   &gt;= 12  , &quot;ADT&quot;,&quot;CNN&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/C/I</label>
    <type>Text</type>
</CustomField>