force-app/main/default/objects/PAF_Profile__c/fields/ADT_CNN_INF__c.field-meta.xml
<CustomField>
    <fullName>ADT_CNN_INF__c</fullName>
    <label>ADT/CNN/INF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADT</fullName>
                <default>true</default>
                <label>ADT</label>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>CNN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>