force-app/main/default/objects/PAF_Profile__c/fields/ADT_Count__c.field-meta.xml
<CustomField>
    <fullName>ADT_Count__c</fullName>
    <formula>IF( A_C_I__c  = &quot;INF&quot;, 0,
IF ( A_C_I__c = &quot;CNN&quot; , 0 , 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADT Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>