force-app/main/default/objects/PAF_Profile__c/fields/Age_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_Departure_Date__c</fullName>
    <formula>YEAR(   PAF_Quote__r.Departure_Date__c   ) - YEAR( Account__r.DOB__c ) -IF(OR (MONTH(PAF_Quote__r.Departure_Date__c) &lt; MONTH(Account__r.DOB__c),AND(MONTH(PAF_Quote__r.Departure_Date__c) == MONTH(Account__r.DOB__c),DAY(PAF_Quote__r.Departure_Date__c) &lt; DAY(Account__r.DOB__c))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age(Departure Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>