force-app/main/default/objects/PAF_Profile__c/fields/Air_Up__c.field-meta.xml
<CustomField>
    <fullName>Air_Up__c</fullName>
    <label>Air Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QF</fullName>
            </value>
            <value>
                <fullName>Business Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>