force-app/main/default/objects/PAF_Profile__c/fields/Business_Class_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Business_Class_Surcharge__c</fullName>
    <formula>IF( Business_Class_UpgradePAX1__c ,  PAF_Quote__r.PAF_Packagee__r.Business_Class_Upgrade_Surcharge__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Class Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>