force-app/main/default/objects/PAF_Profile__c/fields/Business_Class_UpgradePAX1__c.field-meta.xml
<CustomField>
    <fullName>Business_Class_UpgradePAX1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Class Upgrade</label>
    <type>Checkbox</type>
</CustomField>