force-app/main/default/objects/PAF_Profile__c/fields/CNN_Count__c.field-meta.xml
<CustomField>
    <fullName>CNN_Count__c</fullName>
    <formula>IF( A_C_I__c = &quot;CNN&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNN (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>