force-app/main/default/objects/PAF_Profile__c/fields/Email_Lead__c.field-meta.xml
<CustomField>
    <fullName>Email_Lead__c</fullName>
    <formula>IF( Lead_Contact__c , Account__r.PersonContact.Email,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email(Lead)</label>
    <type>Text</type>
</CustomField>