force-app/main/default/objects/PAF_Profile__c/fields/INF_Count__c.field-meta.xml
<CustomField>
    <fullName>INF_Count__c</fullName>
    <formula>if( A_C_I__c = &quot;INF&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INF(Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>