force-app/main/default/objects/PAF_Profile__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Contact</label>
    <type>Checkbox</type>
</CustomField>