force-app/main/default/objects/PAF_Profile__c/fields/Name_Lead__c.field-meta.xml
<CustomField>
    <fullName>Name_Lead__c</fullName>
    <formula>Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name(Lead)</label>
    <type>Text</type>
</CustomField>