force-app/main/default/objects/PAF_Profile__c/fields/Package_PP__c.field-meta.xml
<CustomField>
    <fullName>Package_PP__c</fullName>
    <formula>IF( A_C_I__c = &quot;CNN&quot;,  PAF_Quote__r.PAF_Packagee__r.Child_Total__c , 
 IF(A_C_I__c = &quot;INF&quot;,  PAF_Quote__r.PAF_Packagee__r.Infant_Total__c ,  PAF_Quote__r.PAF_Packagee__r.Adult_Total__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package PP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>