force-app/main/default/objects/PAF_Profile__c/fields/PAF_Quote__c.field-meta.xml
<CustomField>
    <fullName>PAF_Quote__c</fullName>
    <label>PAF Quote</label>
    <referenceTo>PAF_Quote__c</referenceTo>
    <relationshipName>PAF_Quote</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>