force-app/main/default/objects/PAF_Profile__c/fields/QF_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>QF_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QF Surcharge</label>
    <type>Checkbox</type>
</CustomField>