force-app/main/default/objects/PAF_Profile__c/fields/QF_Surchargeformula__c.field-meta.xml
<CustomField>
    <fullName>QF_Surchargeformula__c</fullName>
    <formula>IF(  QF_Surcharge__c ,  PAF_Quote__r.PAF_Packagee__r.Qantas_Surcharge__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>