force-app/main/default/objects/PAF_Profile__c/fields/QN__c.field-meta.xml
<CustomField>
    <fullName>QN__c</fullName>
    <formula>PAF_Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QN</label>
    <type>Text</type>
</CustomField>