force-app/main/default/objects/PAF_Profile__c/fields/Single_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Single_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Supplement</label>
    <type>Checkbox</type>
</CustomField>