force-app/main/default/objects/PAF_Profile__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <formula>Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surname</label>
    <type>Text</type>
</CustomField>