force-app/main/default/objects/PAF_Profile__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Total package price for traveller</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>