force-app/main/default/objects/PAF_Profile__c/fields/TestCheckbox__c.field-meta.xml
<CustomField>
    <fullName>TestCheckbox__c</fullName>
    <formula>TEXT(PAF_Quote__r.PAFPACKQUOTEJUNC__r.Inbound_Gateway__c) = &quot;ADL&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestCheckbox</label>
    <type>Checkbox</type>
</CustomField>