force-app/main/default/objects/PAF_Profile__c/fields/zzzzzz__c.field-meta.xml
<CustomField>
    <fullName>zzzzzz__c</fullName>
    <formula>IF (AND(TEXT(PAF_Quote__r.PAF_Packagee__r.Stopover_Inclusion__c)= &quot;OPT&quot;,VALUE(TEXT( PAF_Quote__r.PAFPACKQUOTEJUNC__r.Stopover_Outbound_Nights__c)) &gt; 0) , (IF(Single_Supplement__c ,1,0) * PAF_Quote__r.PAF_Packagee__r.Stopover_Allocation__c) + 50,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>